--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -5,7 +5,7 @@
 {{/if}}
 
 {{#if (is-mobile 'any')}}
-    <p class="mobile-device-helper">I'm a mobile device ( Rendered via helper)</p>
+    <p id="mobile-device-helper">I'm a mobile device ( Rendered via helper)</p>
 {{else}}
-    <p class="not-mobile-device-helper">I'm a not a mobile device ( Rendered via helper)</p>
+    <p id="not-mobile-device-helper">I'm a not a mobile device ( Rendered via helper)</p>
 {{/if}}
