--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -3,3 +3,9 @@
 {{else}}
     <p id='not-mobile-device'>I'm not a mobile device :(</p>
 {{/if}}
+
+{{#if (is-mobile 'any')}}
+    <p id="mobile-device-helper">I'm a mobile device ( Rendered via helper)</p>
+{{else}}
+    <p id="not-mobile-device-helper">I'm a not a mobile device ( Rendered via helper)</p>
+{{/if}}
