--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,4 +1,4 @@
-{{#if isMobile.any}}
+{{#if this.isMobile.any}}
   <p id="mobile-device">I'm a mobile device!</p>
 {{else}}
   <p id="not-mobile-device">I'm not a mobile device :(</p>
